--- a/style.css
+++ b/style.css
@@ -56,3 +56,9 @@ li {
   font-size: 1rem;
   text-transform: capitalize;
 }
+
+footer {
+  background:rgb(43, 43, 83);
+  padding: 2em;
+  text-align: center;
+}
