--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed&display=swap');
 
+*, *::before, *::after {
+  box-sizing: border-box;
+}
 
 html {
   font-family: helvetica;
@@ -13,17 +16,23 @@ html, body {
 }
 
 
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-stretch: condensed;
     background-color: rgb(21, 21, 24);
     color:rgba(240, 243, 243, 0.972);
+    line-height: 1.75rem;
+    background-image: url("https://tinyurl.com/fbv46r25");
 }
+
 
 h1, h2, h3 {
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: 900;
+    line-height: 1;
 }
+
 
 p {
   font-stretch: normal;
@@ -35,9 +44,43 @@ a {
   text-decoration: none;
 }
 
+a:hover,
+a:focus {
+    color: rgb(41, 189, 189);
+}
+
 abbr {
   color: rgb(231, 203, 125);
   text-decoration: none;
+}
+
+div[role=article] {
+  background-color: rgb(30, 29, 31);
+  border-radius: 0.2rem;
+  padding: 1rem;
+  margin: 1rem;
+  box-shadow: 0px 0px 5px 0px rgb(93, 93, 105);
+}
+
+header{
+  background:rgb(43, 43, 83);
+  width: 100%;
+  padding: 0.5rem 1rem;
+  text-align: center;
+  justify-self: center;
+  box-shadow: 0px 0px 5px 0px rgb(93, 93, 105);
+}
+
+.intro {
+  width: 100%;
+}
+
+.intro .summary {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding: 1em 1em;
 }
 
 .design-name {
@@ -48,9 +91,14 @@ abbr {
   
 li {
   color: rgb(223, 226, 246);
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  line-height: 1.75em;
 }
-  
+
+.design-selection li {
+  margin-top: 0.5em;
+  padding: 0.5em;
+}
 .designer-name {
   color: rgb(132, 196, 248);
   font-size: 1rem;
@@ -58,7 +106,90 @@ li {
 }
 
 footer {
+  justify-content: center;
   background:rgb(43, 43, 83);
-  padding: 2em;
+  padding: 2em 2em;
   text-align: center;
+  box-shadow: 0px 0px 5px 0px rgb(93, 93, 105);
+}
+
+footer a {
+  color:rgba(205, 213, 255, 0.972);
+}
+
+
+.preamble {
+  display: grid;
+  margin: 0 auto;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.preamble h3 {
+  text-align: center;
+  grid-column: span 3;
+}
+
+.sidebar {
+  background-color: rgb(31, 37, 37);
+  text-align: center;
+  margin: 0 auto;
+  height: min-content;
+  padding: 1em 0 1em 0;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.summary {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+
+@media (min-width: 900px) {
+  .page-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  footer {
+    background: rgb(30, 29, 31);
+    margin-bottom: 2em;
+  }
+
+  footer a {
+    background: rgba(82, 88, 116, 0.972);
+    border: 0.5em solid rgba(240, 243, 243, 0.972);
+    border-radius: 50%;
+    padding: 1em;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+
+  footer a:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+
+  .main {
+    width: 50%;
+    margin-left: auto;
+  }
+
+  p {
+    padding: 0 1em 0 1em;
+  }
+
+  .sidebar {
+    padding: 1.5em 1em 1.5em 1em;
+    width: 30%;
+  }
+
+  .design-selection li{
+    display: flex;
+    background-color:rgba(82, 88, 116, 0.972);
+    flex-flow: column wrap;
+    box-shadow: 0 4px 8px 0 rgba(176, 115, 255, 0.294);
+  }
 }
