--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 html {
-  font-family: helvetica;
   height: 100%;
 }
 
@@ -106,6 +105,10 @@ li {
   text-transform: capitalize;
 }
 
+div [role="main"] > footer {
+  grid-area: f;
+}
+
 footer {
   justify-content: center;
   background: radial-gradient(rgb(0, 35, 56), rgb(0, 72, 114));
@@ -118,10 +121,22 @@ footer a {
   color:rgba(205, 213, 255, 0.972);
 }
 
+div [role="main"] {
+  grid-area: m;
+}
+
+
+.page-wrapper {
+  display: grid;
+  grid-template-areas: 
+    "h"
+    "m"
+    "s"
+    "f";
+}
 
 .preamble {
   display: grid;
-  margin: 0 auto;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
@@ -130,13 +145,16 @@ footer a {
   grid-column: span 3;
 }
 
+.sidebar .wrapper {
+  grid-area: s;
+}
 .sidebar {
   background: linear-gradient(#0e477c, #771633);
   box-shadow: 0px 0px 5px 0px rgb(56, 141, 211);
   text-align: center;
-  margin: 0 auto;
   height: min-content;
   padding: 1em 0 1em 0;
+  
 }
 
 .sidebar ul {
@@ -144,21 +162,26 @@ footer a {
   padding-left: 0;
 }
 
-.summary {
-  max-width: 600px;
-  margin: 0 auto;
-}
 
 
 @media (min-width: 900px) {
   .page-wrapper {
-    display: flex;
-    flex-wrap: wrap;
+    grid-template-areas: 
+    "h h"
+    "m s"
+    "m s"
+    "f f";
   }
 
-  footer {
-    background: radial-gradient(rgb(26, 2, 34), rgb(68, 1, 59));
-    margin-bottom: 2em;
+  div [role="main"] div{
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  div [role="main"] > footer {
+    position: absolute;
+    width: 100%;
   }
 
   footer a {
@@ -174,18 +197,22 @@ footer a {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
 
-  .main {
-    width: 50%;
-    margin-left: auto;
+  .intro {
+    grid-area: h;
   }
+
 
   p {
     padding: 0 1em 0 1em;
   }
 
   .sidebar {
+    margin: auto;
+    margin-top: 10vh;
+  }
+  .sidebar .wrapper {
+    margin: auto;
     padding: 1.5em 1em 1.5em 1em;
-    width: 30%;
   }
 
   .design-selection li{
